# claim-auditor

./: .gitignore  ARCHITECTURE_DIAGRAM.md  PIPELINE_EXPLAINED.md  README.md
backend/: .env.example  Dockerfile  FEATURES.md  alembic.ini  docker-compose.yml  docker-entrypoint.sh  mcp_server.py  pyproject.toml  pyrightconfig.json  requirements.txt  streamlit_app.py
backend/alembic/: env.py
backend/alembic/versions/: 80159ae5f3c8_initial_schema.py
backend/app/: config.py  container.py  database.py  dependencies.py  facade.py  health.py  logging_config.py  main.py
backend/app/api/: claims.py  companies.py  pipeline.py  transcripts.py
backend/app/clients/: base_client.py  fmp_client.py  llm_client.py
backend/app/domain/: metrics.py  scoring.py  verdicts.py
backend/app/engines/: __init__.py  claim_extractor.py  discrepancy_analyzer.py  metric_mapper.py  verification_engine.py
backend/app/models/: __init__.py  claim.py  company.py  discrepancy_pattern.py  financial_data.py  transcript.py  verification.py
backend/app/prompts/: manager.py
backend/app/repositories/: __init__.py  base.py  claim_repo.py  company_repo.py  discrepancy_pattern_repo.py  financial_data_repo.py  transcript_repo.py  verification_repo.py
backend/app/schemas/: __init__.py  claim.py  company.py  discrepancy.py  financial_data.py  pipeline.py  transcript.py  verification.py
backend/app/services/: __init__.py  analysis_service.py  extraction_service.py  ingestion_service.py  (+1 more)
backend/data/: claim_auditor.db
backend/scripts/: run_pipeline.py
backend/tests/: conftest.py
docs/: doc.md  (+5 more)
(+62 files in other folders)
